# Settly

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STANDARDS.md
.agileplus/: worklog.md
.github/workflows/: auto-merge.yml  benchmarks.yml  cargo-deny.yml  coverage.yml  legacy-tooling-gate.yml  pages-deploy.yml  pre-commit.yml  quality-gate.yml  release-drafter.yml  sast.yml  security-deep-scan.yml  security.yml
src/: lib.rs
src/adapters/: formats.rs  mod.rs  sources.rs
src/application/: builder.rs  mod.rs
src/domain/: config.rs  errors.rs  layers.rs  mod.rs  ports.rs  sources.rs  validation.rs
src/infrastructure/: error.rs  mod.rs
