[package]
name = "configkit"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
description = "Universal configuration management with layered configs and validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/configkit"
documentation = "https://docs.rs/configkit"
keywords = ["config", "configuration", "settings", "env", "environment"]
categories = ["config", "development-tools"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Environment
env_logger = "0.11"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Logging
tracing = "0.1"

# Async
tokio = { version = "1.35", features = ["fs", "sync", "macros"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
